# forgery-exp

./: .gitignore  README.md  agent_exp_guide.md  pyproject.toml  requirements.txt
docs/: defense_reference.md
src/forgery_exp/: __init__.py  data.py  make_toy_dataset.py  model.py  predict.py  train.py
